--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,17 +1,15 @@
 <div class="main_container">
-    <div class="main_left">
-        <h1 class="main_page_header">Ремонт смартфонов по всей России</h1>
-        <ul style="list-style-position: inside;">
-            <li>Быстро<br></li>
-            
-            <li>Качественно</li>
-            
-            <li>Не дорого</li>
+    <div class="main_box">
+        <h1 style="margin-bottom:50px">Возникли проблемы с мобильным устройством?</h1>
+        <ul>
+            <li style="margin-bottom:20px">Проведем бесплатную диагностику в нашем сервисе в<br> течение 10 минут после обращения</li>
+
+            <li style="margin-bottom:20px">Гарантийная ответственность</li>
+
+            <li style="margin-bottom:20px">Качество обслуживания</li>
+
+            <li>Доступность цены</li>
         </ul>
     </div>
-    <div class="main_right">
-        <img src="/service.webp" width="750px" height="500px" alt="">
-    </div>
+    <img src="/repair-phone.png" alt="">
 </div>
-
-
