--- a/public/style.css
+++ b/public/style.css
@@ -1,61 +1,68 @@
-body{
+body {
     background: #ffb121
 }
-*{
+
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: Nunito Sans, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6{
+/* h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
-}
-:root{
+} */
+
+:root {
     --clr: #222327;
 }
-/* -----------------------------------------------------------Headers */
-.main_page_header{
-    display: flex;
-    justify-content: center;
-    font-size: 3em;
-    text-align: center;
-}
+
+
 
 /*-----------------------------------------------------------Containers*/
 
-.container{
+.container {
     /* text-align: center; */
     width: 100%;
-    max-width: 1500px;
+    max-width: 1400px;
     margin: 0 auto;
 }
+
 /* -----------------------------------------Main */
-    .main_container{
-        height: 500px;
-        display: flex;
-        background: #ffb938;
-        border-radius: 10px;
-    }
-    .main_right{
-        max-width: 750px;
-    }
-    .main_left{
-        max-width: 750px;
-        display: flex;
-        flex-direction: column;
-        
-    }
-    .main_left ul{
-        font-size: 2em;
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-    }
+.main_container {
+    height: 500px;
+    display: flex;
+    background: #4F4F4F;
+    border-radius: 10px;
+    justify-content: space-between;
+}
+
+.main_box {
+    display: flex;
+    flex-direction: column;
+    color: #FFFFFF;
+    margin-left: 100px;
+    margin-top: 30px;
+    vertical-align: middle;
+}
+
+.main_box ul {
+    list-style-position: inside;
+    text-align: left;
+    font-weight: 400;
+    font-size: 20px;
+    list-style-image: url(Group.png);
+}
+
 
 /*-----------------------------------------------------------Header*/
 
-.header{ 
+.header {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,7 +74,7 @@ h1, h2, h3, h4, h5, h6{
 
 /*----------------------------------------------------------Navigation*/
 
-.nav{
+.nav {
     position: relative;
     width: 1500px;
     height: 80px;
@@ -77,12 +84,13 @@ h1, h2, h3, h4, h5, h6{
     align-items: center;
     border-radius: 10px;
 }
-.logo{
+
+.logo {
     display: flex;
     align-items: center;
 }
 
-.nav ul{
+.nav ul {
     display: flex;
 
     margin-left: 50px;
@@ -90,9 +98,10 @@ h1, h2, h3, h4, h5, h6{
     justify-content: space-between;
     margin-right: 100px;
     margin-left: 100px;
-    
+
 }
-.nav ul li{
+
+.nav ul li {
     position: relative;
     list-style: none;
     width: 70px;
@@ -100,7 +109,8 @@ h1, h2, h3, h4, h5, h6{
     z-index: 1;
     margin-right: 50px;
 }
-.nav ul li a{
+
+.nav ul li a {
     position: relative;
     display: flex;
     justify-content: center;
@@ -110,17 +120,20 @@ h1, h2, h3, h4, h5, h6{
     text-align: center;
     font-weight: 600;
 }
-.nav ul li a .icon{
+
+.nav ul li a .icon {
     position: relative;
     display: block;
     line-height: 50px;
     font-size: 1.5em;
     color: var(--clr);
 }
-.nav ul li.active a .icon{
+
+.nav ul li.active a .icon {
     transform: translateY(-32px);
 }
-.nav ul li a .text{
+
+.nav ul li a .text {
     position: absolute;
     color: var(--clr);
     font-weight: 600;
@@ -128,11 +141,13 @@ h1, h2, h3, h4, h5, h6{
     letter-spacing: 0.03em;
     transform: translateY(30px);
 }
-.nav ul li.active a .text{
+
+.nav ul li.active a .text {
     opacity: 1;
     transform: translateY(20px);
 }
-.indicator{
+
+.indicator {
     position: absolute;
     top: -50%;
     width: 70px;
@@ -143,7 +158,7 @@ h1, h2, h3, h4, h5, h6{
     transition: .5s;
 }
 
-.indicator::before{
+.indicator::before {
     content: '';
     position: absolute;
     top: 50%;
@@ -155,7 +170,7 @@ h1, h2, h3, h4, h5, h6{
     box-shadow: 0px -10px 0 0 var(--clr);
 }
 
-.indicator::after{
+.indicator::after {
     content: '';
     position: absolute;
     top: 50%;
@@ -167,69 +182,69 @@ h1, h2, h3, h4, h5, h6{
     box-shadow: 0px -10px 0 0 var(--clr);
 }
 
-.nav ul li:nth-child(1).active ~ .indicator{
+.nav ul li:nth-child(1).active~.indicator {
     transform: translateX(calc(120px * 0));
 }
-.nav ul li:nth-child(2).active ~ .indicator{
+
+.nav ul li:nth-child(2).active~.indicator {
     transform: translateX(calc(120px * 1));
 }
-.nav ul li:nth-child(3).active ~ .indicator{
+
+.nav ul li:nth-child(3).active~.indicator {
     transform: translateX(calc(120px * 2));
 }
-.nav ul li:nth-child(4).active ~ .indicator{
+
+.nav ul li:nth-child(4).active~.indicator {
     transform: translateX(calc(120px * 3));
 }
-.nav ul li:nth-child(5).active ~ .indicator{
+
+.nav ul li:nth-child(5).active~.indicator {
     transform: translateX(calc(120px * 4));
 }
 
 /* -----------------------------------------------------Таблицы */
 #myTable {
-    border-collapse: collapse; 
+    border-collapse: collapse;
     width: 100%;
     font-size: 14px;
     border: 1px solid rgba(0, 0, 0, .3);
-    overflow: hidden; 
+    overflow: hidden;
     border-radius: 10px;
-    
-  }
-  
-  #myTable th {
-    text-align: center; 
+
+}
+
+#myTable th {
+    text-align: center;
     justify-content: center;
-    
+
     border-right: 1px solid rgba(0, 0, 0, .3);
     text-transform: uppercase;
     background-color: white;
     top: 0;
     height: 64px;
-    
-  }
-  #myTable td{
-    text-align: center; 
+
+}
+
+#myTable td {
+    text-align: center;
     /* padding: 12px; */
-    border-right:1px solid rgba(0, 0, 0, .3);
-  }
-  
-  #myTable tr {
+    border-right: 1px solid rgba(0, 0, 0, .3);
+}
+
+#myTable tr {
     /* background-color: #f0f0f0; */
     border-bottom: 1px solid rgba(0, 0, 0, .3);
     background-color: white;
-  }
+}
 
-  #myTable tr:hover{
+#myTable tr:hover {
     background-color: #e8e6e6;
-  }
+}
 
-.hidden_box{
+.hidden_box {
     display: none;
 }
-.box{
+
+.box {
     display: block;
 }
-
-  
-
-  
-
-  
