--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,5 +1,6 @@
+<div class="container">
 <header class="header">
-    <div class="container">
+    
         <nav class="nav">
             <ul>
                 {{#if home}}
@@ -99,14 +100,17 @@
                 {{/if}}
                 <div class="indicator"></div>
             </ul>
-            
-                
+
+            <div style="display: flex; align-items:center;font-weight: 700; font-size: 14px;">
+                <img src="vector.png" alt="">
+                <p style="margin-right: 35px;">+7(962)037-77-45</p>
                 <a href="/out">Выйти</a>
                 <a href="/"><img style="border: 0;" src="/logo.png" alt=""></a>
-            
+            </div>
+
         </nav>
 
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    </div>
 </header>
+</div>
