--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,14 +2,55 @@
     <div class="main_box">
         <h1 style="margin-bottom:50px">Возникли проблемы с мобильным устройством?</h1>
         <ul>
-            <li style="margin-bottom:20px">Проведем бесплатную диагностику в нашем сервисе в<br> течение 10 минут после обращения</li>
+            <li>Проведем бесплатную диагностику в нашем сервисе в<br> течение 10 минут после
+                обращения</li>
 
-            <li style="margin-bottom:20px">Гарантийная ответственность</li>
+            <li>Гарантийная ответственность</li>
 
-            <li style="margin-bottom:20px">Качество обслуживания</li>
+            <li>Качество обслуживания</li>
 
             <li>Доступность цены</li>
         </ul>
     </div>
     <img src="/repair-phone.png" alt="">
+</div>
+
+<div class="main_button">
+    <form id="create_application" action="/create_application"></form>
+    <button form="create_application"
+        style="width: 300px; height: 70px; border-radius:35px; color:#ffffff; background-color:#F2A83B;; border:none;font-weight: 400;font-size: 24px;line-height: 29px;">
+        Оформить заявку
+    </button>
+</div>
+
+<img style="margin-top:150px" src="/Бренды.png" alt="">
+
+<div class="contacts">
+    <div class="contacts_left">
+        <h1 style="margin-bottom: 60px;">До нас очень легко добраться</h1>
+        <h2 style="margin-bottom: 30px;">Контакты</h2>
+        <div style="display:flex; align-items:center; margin-bottom:15px; margin-left:10px">
+            <img style="margin-right:5px; margin-left:-10px; width:30px; height:30px" src="1234.png" alt="">
+            <p style="margin-right: 35px; font-weight: 400; font-size: 18px; line-height: 22px;">+7(962)037-77-45</p>
+        </div>
+
+        <div style="display:flex; align-items:center; margin-bottom:15px; margin-left:10px">
+            <img style="margin-right:5px; margin-left:-10px;  width:30px; height:30px" src="business-outline 1.png"
+                alt="">
+            <p style="margin-right: 35px; font-weight: 400; font-size: 18px; line-height: 22px;">г. Омск, ул. Конева, д. 10, офис 103</p>
+        </div>
+
+        <div style="display:flex; align-items:center; margin-bottom:15px; margin-left:10px">
+            <img style="margin-right:5px; margin-left:-10px; width:30px; height:30px" src="mail-open-outline 1.png"
+                alt="">
+            <p style="margin-right: 35px; font-weight: 400; font-size: 18px; line-height: 22px;">eterlate@gmail.com</p>
+        </div>
+
+        <div style="display:flex; align-items:center; margin-left:10px">
+            <img style="margin-right:5px; margin-left:-10px; width:30px; height:30px" src="time-outline 1.png" alt="">
+            <p style="margin-right: 35px; font-weight: 400; font-size: 18px; line-height: 22px;">Ежедневно с 10:00 до 20:00</p>
+        </div>
+    </div>
+    <script style="border:#F2A83B 1px solid ;" type="text/javascript" charset="utf-8" async
+        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A88cd67b151dfd12fadecf1f1425712c727d22eb5824b81e599464e9bd28006ef&amp;width=600&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 </div>
