--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #FFFFFF
+    background: #E5E5E5;
 }
 
 * {
@@ -28,9 +28,14 @@ h6 {
 
 .container {
     /* text-align: center; */
+    min-height: 100vh;
+    height: 100%;
     width: 100%;
     max-width: 1400px;
     margin: 0 auto;
+    background-color: #fff;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.25);
+    position: relative;
 }
 
 /* -----------------------------------------Main */
@@ -71,12 +76,13 @@ h6 {
     display: flex;
     justify-content: center;
     margin-top: -35px;
+    
 }
 
 .contacts {
     display: flex;
-    justify-content: space-between;
-    margin: 150px 80px;
+    justify-content: space-evenly;
+    padding: 150px 0;
 }
 
 .contacts_left p{
@@ -86,12 +92,71 @@ h6 {
     
 }
 
-/*-----------------------------------------------------------Header*/
+/*-----------------------------------------------------------Auth*/
+.enter{
+    margin: 100px auto;
+    display: flex;
+    width: 460px;
+    height: 410px;
+    flex-direction: column;
+    align-items: center;
+    background-color: #222327;
+    border-radius: 10px;
+}
+.enter input{
+    width: 310px;
+    height: 50px;
+    border-radius: 10px;
+    border: none;
+    text-align: center;
+    margin:15px 0;
+    font-size: 16px;
+}
+.enter button{
+    width: 310px;
+    height: 60px;
+    background-color: #F2A83B;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 16px;
+}
+
+.registration{
+    margin: 100px auto;
+    display: flex;
+    width: 460px;
+    height: 620px;
+    flex-direction: column;
+    align-items: center;
+    background-color: #222327;
+    border-radius: 10px;
+}
+
+.registration input{
+    width: 310px;
+    height: 50px;
+    border-radius: 10px;
+    border: none;
+    text-align: center;
+    margin:15px 0;
+    font-size: 16px;
+}
+.registration button{
+    width: 310px;
+    height: 60px;
+    background-color: #F2A83B;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+/*-----------------------------------------------------------applications*/
 
 .applications{
     display: flex;
     justify-content: center;
-    margin: 60px 0;
+    padding: 60px 0;
 }
 .applications_header{
     display: flex;
@@ -173,6 +238,8 @@ h6 {
     align-items: center;
     background: var(--clr);
     min-height: 20vh;
+    width: 1400px;
+    margin: 0 auto;
 }
 
 
@@ -184,7 +251,10 @@ h6 {
     align-items: center;
     background: var(--clr);
     min-height: 20vh;
+    width: 1400px;
+    margin: 0 auto;
 }
+
 
 .footer_nav a {
     font-weight: 700;
@@ -197,6 +267,22 @@ h6 {
 
 .footer_nav a:last-child {
     margin-right: 0;
+}
+
+/* -----------------------------------------------------Личный кабинет */
+
+
+.admin_worker{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 10px;
+    left:60px;
+    
+}
+.admin_worker a{
+    color: #777373;
+    text-decoration: none;
 }
 
 
@@ -331,13 +417,21 @@ h6 {
 }
 
 /* -----------------------------------------------------Таблицы */
-#myTable {
-    margin: 50px 0;
-    border-collapse: collapse;
+.table_wrapper{
     width: 100%;
+    height: 100%;
+    min-height: 300px;
+    padding: 20px 0 ;
+    margin: 0 auto;
+    background-color: #F2A83B;
+}
+
+#myTable {
+    width: 1300px;
+    margin: 50px auto;
+    border-collapse: collapse;
     font-size: 14px;
-    border: 2px solid rgba(0, 0, 0, .5);
-    overflow: hidden;
+    border: 1px solid rgba(0, 0, 0, .5);
     border-radius: 10px;
     background-color: #e8e6e6;
 
@@ -346,10 +440,8 @@ h6 {
 #myTable th {
     text-align: center;
     justify-content: center;
-
     border-right: 1px solid rgba(0, 0, 0, .5);
     text-transform: uppercase;
-    
     top: 0;
     height: 64px;
 
