--- a/views/adminCab.hbs
+++ b/views/adminCab.hbs
@@ -1,5 +1,6 @@
-<h1>Все заявки</h1>
 {{#if massiv.length}}
+<div class="table_wrapper">
+    <h2 style="margin-left:50px; margin-top:20px; width: 100%; color:#fff; font-size:28px">Управление:</h2>
     <table id="myTable">
         <tr>
             <th>ID заявки</th>
@@ -40,12 +41,12 @@
                 <td>{{worker}}</td>
                 <td>{{status}}</td>
                 <td>
-                    <input type="image" src="edit.svg" form={{_id}} formaction="/edit_applications" formmethod="get" width="25px"
-                        height="25px">
+                    <input type="image" src="edit.svg" form={{_id}} formaction="/edit_applications" formmethod="get"
+                        width="25px" height="25px">
                 </td>
                 <td>
-                    <input type="image" src="delete.svg" form={{_id}} formaction="/delete_application" formmethod="get" width="25px"
-                        height="25px">
+                    <input type="image" src="delete.svg" form={{_id}} formaction="/delete_application" formmethod="get"
+                        width="25px" height="25px">
                 </td>
 
                 <input type="hidden" name="_id" value={{_id}}></input>
@@ -64,6 +65,7 @@
         </form>
         {{/each}}
     </table>
+</div>
 {{else}}
 <h3>НЕТ ЗАЯВОК</h3>
 {{/if}}
