--- a/views/cab.hbs
+++ b/views/cab.hbs
@@ -1,22 +1,40 @@
-<h1>Личный кабинет</h1>
+<h1 style="display: flex; justify-content: center; padding:30px 0;align-items:center; "><img
+        src="person-circle-outline.svg" style="width: 50px; height:50px; margin:0 10px">Личный кабинет</h1>
+
 {{#if massiv.length}}
-<ul>
-    {{#each massiv}}
-    <li>
-            <label>
-                <span>{{phone_number}}</span>
-                <span>{{device_type}}</span>
-                <span>{{brand}}</span>
-                <span>{{model}}</span>
-                <span>{{defect}}</span>
-                <span>{{comment}}</span>
-             
-            </label>
-    </li>
-    {{/each}}
-</ul>
+<div class="table_wrapper">
+    <h2 style="margin-left:50px; margin-top:20px; width: 100%; color:#fff; font-size:28px">Ваши заявки:</h2>
+    <table id="myTable">
+        <tr>
+            <th>Номер телефона</th>
+            <th>Брэнд</th>
+            <th>Модель</th>
+            <th>Вид поломки</th>
+            <th>Дата создания</th>
+            <th>Дата визита</th>
+            <th>Комментарий клиента</th>
+            <th>Работник</th>
+            <th>Статус заявки</th>
+        </tr>
+        {{#each massiv}}
+        <tr>
+            <td>{{phone_number}}</td>
+            <td>{{brand}}</td>
+            <td>{{model}}</td>
+            <td>{{defect}}</td>
+            <td>{{date_create}}</td>
+            <td>{{date_visit}}</td>
+            <td>{{comment}}</td>
+            <td>{{worker}}</td>
+            <td>{{status}}</td>
+        </tr>
+        {{/each}}
+    </table>
+</div>
 {{else}}
 <h3>НЕТ ЗАЯВОК</h3>
 {{/if}}
-<a href="/adminCab">Только для админа</a>
-<a href="/workerCab">Только для работника</a>
+<div class="admin_worker">
+    <a href="/adminCab">Только для админа</a>
+    <a href="/workerCab">Только для работника</a>
+</div>
