--- a/views/enter.hbs
+++ b/views/enter.hbs
@@ -1,16 +1,14 @@
-<div class="container">
-    <div class="enter">
-        <h1>Вход</h1>
-        <form action="/login" method="post">
-            
-                <label class="search_link" for="username">Логин</label>
-                <input class="search_link" style="margin: 0;" name="username" type="text">
-            
-                <label class="search_link" for="password">Пароль</label>
-                <input class="search_link" style="margin: 0;" type="password" name="password" type="text">
-            <br>
-            <button class="btn" style="margin-top: 20px;" type="submit">Войти</button>
-        </form>
-        <a href="/registration_page">Зарегистрироваться</a>
-    </div>
-</div>
+<form class="enter" action="login" method="post">
+    <h1 style="color:#F2A83A; margin-top:35px;margin-bottom:20px;">Вход</h1>
+
+    <input placeholder="Логин" class="search_link" name="username" type="text">
+
+    <input placeholder="Пароль" class="search_link" type="password" name="password" type="text">
+
+    <br>
+    <button class="btn" style="margin-top: 20px;"
+        type="submit">Войти</button>
+
+    <a style="color: #777373; text-decoration:none; margin-top:10px; " href="/registration_page">Зарегистрироваться</a>
+
+</form>
