--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
 <div class="main_button">
     <form id="create_application" action="/create_application"></form>
     <button form="create_application"
-        style="width: 300px; height: 70px; border-radius:35px; color:#ffffff; background-color:#F2A83B;; border:none;font-weight: 400;font-size: 24px;line-height: 29px;">
+        style="width: 300px; height: 70px; border-radius:35px; color:#ffffff; background-color:#F2A83B; border:5px #fff solid; font-weight: 400;font-size: 24px;line-height: 29px;">
         Оформить заявку
     </button>
 </div>
