--- a/views/registration_page.hbs
+++ b/views/registration_page.hbs
@@ -1,24 +1,20 @@
-<div class="container">
-    <div class="enter">
-        <h1>Регистрация</h1>
-        <form action="/registration" method="post">
+
+    <div class="registration">
+        <h1 style="color:#F2A83A; margin-top:35px;margin-bottom:20px;">Регистрация</h1>
+        
             
-                <label class="search_link" for="username">Логин</label>
-                <input class="search_link" style="margin: 0;" name="username" type="text">
+                
+                <input placeholder="Логин" name="username" type="text">
 
-                <label class="search_link" for="phone_number">Номер телефона</label>
-                <input class="search_link" style="margin: 0;" name="phone_number" type="text">
-            
-                <label class="search_link" for="password">Пароль</label>
-                <input class="search_link" style="margin: 0;" type="password" name="password" type="text">
+                <input placeholder="Пароль" type="password" name="password" type="text">
 
-                <label class="search_link" for="name">Имя</label>
-                <input class="search_link" style="margin: 0;" type="text" name="name" type="text">
-
-                <label class="search_link" for="lastname">Фамилия</label>
-                <input class="search_link" style="margin: 0;" type="text" name="lastname" type="text">
+                <input placeholder="ФИО" type="text" name="fio" type="text">
+                
+                <input placeholder="Номер телефона" name="phone_number" type="text">
+                
             <br>
-            <button class="btn" style="margin-top: 20px;" type="submit">Регистрация</button>
-        </form>
+            <button form="registration" formaction="/registration" formmethod="post" class="btn" style="margin-top: 20px;" type="submit">Регистрация</button>
+            <a style="color: #777373; text-decoration:none; margin-top:10px; margin-bottom: 20px;" href="/enter">Войти</a>
     </div>
-</div>
+
+<form id="registration"></form>
